# framework

./: .bazelignore  .bazelrc  .gitignore  .repomixignore  AGENTS.md  Cargo.toml  MIGRATION_INVENTORY.md  MODULE.bazel  NOTICE  README.md  biome.jsonc  buf.gen.yaml  buf.yaml  devenv.nix  go.work  nx.json  package.json  pubspec.yaml  tsconfig.base.json  tsconfig.json
.changeset/: config.json
.constitution/architecture/: changelog.md  containers.md  resilience.md  risks.md  strategy.md
.constitution/archived/: EPIC-BI-sdk-stabilization-publication.md
.constitution/prd/: actors.md  capabilities.md  changelog.md  constraints.md  domain-model.md  glossary.md  vision.md
.constitution/reports/: 108-git-faithful-blob-persistence.md  adr-056-capabilities-graduation-assessment-2026-07-21.md  audit-2026-07-04-170703-post-epic-87-baseline.md  bh005-bridge-provider-executed-fidelity-audit.md  epic-ad-docs-to-authority-coverage-matrix.json  epic-ad-docs-to-authority-freeze-gate-closure-inventory.md  epic-ad-docs-to-authority-freeze-gate-summary.md  epic-ad-framework-deferred-surface-decisions.md  epic-ad-kernel-backend-provider-local-surface-decisions.md  epic-ad-normative-docs-claim-inventory.json  epic-ad-typescript-freeze-gate-report.md  epic-af-conformance-gap-plan.json  epic-af-conformance-gap-plan.md  epic-al-portability-inventory.json  epic-al-portable-surface-conformance-gap-inventory.md  epic-al-rust-re-entry-gate-reassessment.md  krt-bl001-freeze-candidate-audit.md
.constitution/spikes/: SPK-BE002.md  SPK-BF002.md  SPK-BK007.md
.constitution/tasks/: changelog.md  critical-path.md
.constitution/tech-spec/: changelog.md  guidelines.md  stack.md
.github/workflows/: ci.yml  release.yml
constitution/: AGENTS.md  Architecture.md  PRD.md  Tasks.md  TechSpec.md
constitution/reports/: runtime-boundary-performance-follow-up.md  runtime-foundation-hardening-sqlite-hot-path.md
constitution/spikes/: epic-ad-docs-to-authority-coverage-matrix.json  epic-ad-docs-to-authority-freeze-gate-closure-inventory.md  epic-ad-docs-to-authority-freeze-gate-summary.md  epic-ad-framework-deferred-surface-decisions.md  epic-ad-kernel-backend-provider-local-surface-decisions.md  epic-ad-normative-docs-claim-inventory.json  epic-ad-typescript-freeze-gate-report.md  epic-ae-modular-boundary-hardening-inventory.md  epic-af-conformance-gap-plan.json  epic-af-conformance-gap-plan.md  epic-h-doc-gap-inventory.md  epic-n-ai-sdk-bridge-inventory.md  epic-o-stream-adapter-inventory.md  epic-p-playground-host-inventory.md  epic-t-kernel-interop-governance-inventory.md  epic-t-kernel-interop-surface-inventory.md  epic-w-semantic-coverage-matrix.md  epic-w-semantic-ecosystem-maturity-closure-inventory.md  epic-y-shared-conformance-engine-closure-inventory.md
dart/kernel/: project.json  pubspec.yaml
dart/kernel-certification/: project.json  pubspec.yaml
dart/kernel-conformance-adapter/: adapter.json  project.json  pubspec.yaml
docs/: KrakenFrameworkDesignRationale.md  KrakenFrameworkSpecification.md  KrakenKernelDesignRationale.md  KrakenKernelSpecification.md  perf-benchmarks.md
docs/guides/: add-a-driver.md  add-a-kernel-backend.md  add-a-language.md  add-a-runner.md  how-conformance-works.md  publishing-and-adopter-onboarding.md  streaming-and-events.md
go/kernel/: backend.go  cbor.go  cbor_test.go  errors.go  fault_injecting_backend.go  fixtures_test.go  go.mod  identity.go  json.go  kernel.go  kernel_runtime.go  kernel_runtime_test.go  lease.go  lease_and_recovery_test.go  memory_backend.go  memory_backend_test.go  project.json  reclamation.go  record.go  (+8 more)
go/kernel-certification/: go.mod  main.go  main_test.go  project.json
go/kernel-conformance-adapter/: adapter.json  dispatch.go  erasure_probe_test.go  go.mod  main.go  operations.go  operations_canonical_rejection.go  operations_liveness.go  operations_maintenance.go  operations_runtime.go  project.json  scope_and_reclamation_operations_test.go  serialization_fallback_test.go
python/kernel/: project.json  pyproject.toml
python/kernel-conformance-adapter/: adapter.json  project.json  pyproject.toml
python/kernel-conformance-adapter/src/tuvren_kernel_adapter/: __init__.py  __main__.py  operations.py  operations_common.py  operations_liveness.py  operations_maintenance.py  operations_protocol.py  operations_runtime.py
python/kernel-conformance-adapter/tests/: test_erasure_probe.py  test_scope_and_reclamation_operations.py
python/kernel/src/tuvren_kernel/: __init__.py  backend.py  cbor.py  errors.py  fault_injection.py  identity.py  records.py  runtime.py  verdict.py
python/kernel/tests/: test_cbor.py  test_import.py  test_kernel_records.py  test_run_liveness.py  test_runtime.py  test_scope_reclamation.py  test_verdict.py
rust/kernel/: BUILD.bazel  project.json
rust/kernel/src/: memory.rs  types.rs
rust/kernel/tests/: kernel_baseline.rs
spec/conformance/kernel/fixtures/: BUILD.bazel  kernel-protocol-adversarial-cbor.json  kernel-protocol-verdict-composition.json
spikes/: framework-contract-partition.md
telemetry/: otel-attributes.json  project.json  semantic-conventions.md
tools/: run-nx.mjs
typescript/host/repl/: BUILD.bazel  CHANGELOG.md  package.json  project.json  tsconfig.dts.json  tsconfig.lib.json  tsconfig.typecheck.json
typescript/host/repl/scripts/: ws-peer.ts
typescript/host/repl/src/: cli.ts
typescript/host/repl/src/lib/: proof-extension.ts  repl-builtin-tools.ts  repl-config.ts  repl-headless-mode.ts  repl-host.ts  repl-live-output.ts  repl-provider.ts  repl-replay.ts  repl-scenarios-support.ts  repl-scenarios.ts  repl-serve-ws.ts  repl-shell.ts  repl-transcript.ts  repl-types.ts
typescript/host/repl/test/: repl-serve-ws.e2e.test.ts  repl-test-helpers.ts  repl.test.ts
typescript/streaming/core/: BUILD.bazel  CHANGELOG.md  README.md  package.json  project.json  tsconfig.dts.json  tsconfig.lib.json  tsconfig.typecheck.json
typescript/streaming/core/src/: index.ts
typescript/streaming/core/src/lib/: stream-core.ts  stream-resume.ts
typescript/streaming/core/test/: stream-resume.test.ts
(+1577 files in other folders)
