"""Epic #87 M1 tracer bullet: prove the Bazel <-> Rust seam on the kernel crate.

Bzlmod only (no WORKSPACE file), per issue #87 SS7: "born Bazel-native."
Scope is intentionally narrow (M1.1): register a Rust toolchain matching
rust-toolchain.toml and resolve external crates from the existing root
Cargo.lock/Cargo.toml. No files move in this milestone; BUILD.bazel targets
are added at packages' current physical paths so the seam is proven before
any git mv happens.

M1.6 postgres-hermeticity decision: the PostgreSQL kernel backend and its
conformance runner (typescript/kernel/backends/postgres,
typescript/kernel/conformance-runner-postgres) intentionally carry no
BUILD.bazel target and stay Nx-driven, per invariant §10.5's sanctioned
exception (devenv-managed Postgres is not idempotent, so it cannot join a
hermetic Bazel graph as-is). See MIGRATION_INVENTORY.md's Multi-home §B for
the full rationale.

M3.0 TypeScript-hermeticity decision (2026-07-02): real aspect_rules_js /
rules_ts adoption was researched and REVERTED by user decision. rules_js
consumes only pnpm lockfiles (no bun.lock path; a mirrored pnpm lockfile
shows measured resolution divergence), and the TS suites are bun:test-based
(all 16 test files across the 5 packages Bazel-shimmed as of M3.0 import
bun:test — the engine at typescript/runtime joined the shim set at M3.2a, and the providers bridge and provider-api binding (typescript/providers/{bridge-ai-sdk,provider-api}) joined at M4.2;
the lone node --test suite, backend-sqlite, is Nx-only per M1.6), a runtime
with no upstream Bazel support (aspect-build/rules_js#1258 open). The
M1.2 native_binary -> tools/bazel/nx-run.sh shim pattern is therefore the
epic-long strategy for all TypeScript BUILD.bazel targets; real ruleset
adoption is a post-epic follow-up gated on upstream bun support. Rust targets
remain genuinely hermetic under rules_rust.
"""

module(
    name = "tuvren_runtime",
    version = "0.1.0",
)

bazel_dep(name = "rules_rust", version = "0.71.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(crate, "crates")
