[project]
name = "tuvren-kernel"
version = "0.1.0"
description = "Tuvren kernel runtime authority for the Python port."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuvren_kernel"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100
